--- a/app.json
+++ b/app.json
@@ -31,7 +31,7 @@
     },
     "AUTH_USERS": {
       "description": "allow only pre-defined users to use this bot",
-      "value": "699615803 809546777"
+      "value": ""
     },
     "FINISHED_PROGRESS_STR": {
       "description": "should be a single character.",
