--- a/app.json
+++ b/app.json
@@ -40,7 +40,11 @@
     "UN_FINISHED_PROGRESS_STR": {
       "description": "should be a single character.",
       "required": false
-    }
+    },
+    "SHOULD_USE_BUTTONS":  {
+      "description": "Use True For Button, False for Manual commands, Default is True",
+      "value": true
+      "required": false
   },
   "stack": "container"
 }
